--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,20 +1,30 @@
-.App {
+.App-bg {
   text-align: center;
   background-image: url(../assets/mountain-bg.jpeg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   min-height: 100vh;
-  min-width: fit-content;
-  /* display: grid; */
+}
+
+.App {
+  background-color: rgba(158, 173, 188, 0.327);
+  padding: 40px;
+  padding-left: 10vmin;
+  padding-right: 10vmin;
+  min-width: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, min-content) 20px;
+  gap: 50px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 80px;
+  width: auto;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: auto;
@@ -29,13 +39,16 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.card {
+  border-radius: var(--border-radius);
+  padding: 30px;
+  background-color: white;
+  box-shadow: 0px 5px 10px rgba(128, 128, 128, 0.228);
 }
 
-.App-header {
-  background-color: #282c34;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Where "Loading" data will appear */
+.display {
+  display: grid;
 }
