--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -11,8 +11,10 @@
   align-items: center;
   justify-items: center;
   gap: 10px;
+  padding: 10px 0;
 }
 
 .headline > h1 {
   font-size: 2.5rem;
+  padding: 0;
 }
