--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,13 @@
 .App-header {
   display: grid;
   grid-template-rows: repeat(2, min-content);
-  gap: 15px;
+  gap: 20px;
   color: var(--dark-accent);
 }
 
 .headline {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   justify-items: center;
   gap: 10px;
@@ -17,4 +17,17 @@
 .headline > h1 {
   font-size: 2.5rem;
   padding: 0;
+}
+
+@media (max-width: 400px) {
+  .headline {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .headline > h1 {
+    font-size: 3rem;
+  }
 }
