--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -1,8 +1,6 @@
 /* Where "Loading" data will appear */
-.display {
-  display: flex;
-  flex-direction: column;
-}
+
+/* TOP */
 
 .today-top-container {
   display: grid;
@@ -13,28 +11,29 @@
   .today-top-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 }
 
 .today-top-container > .current.display {
-  padding-bottom: 35px;
+  padding-bottom: 40px;
 }
 
-.today-info {
+.flex-column {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.today-info > h2,
-.today-info > h3,
+.flex-column > h2,
+.flex-column > h3,
 .date {
   text-align: left;
 }
 
-.hourly > .display {
-  padding-bottom: 15px;
-  padding-top: 30px;
+.display {
+  display: flex;
+  flex-direction: column;
 }
 
 .description {
@@ -59,24 +58,21 @@
   height: 200px;
 }
 
-.hourly {
-  grid-column: 1 / 3;
-}
-
-/* TodayInfo */
+/* TODAY INFO CARDS */
 
 .today-grid {
-  margin: 30px 15px;
+  margin: 40px 15px;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   gap: 25px;
+  /* justify-items: center; */
 }
 
 div.small.card {
   padding: 15px;
-  border: 5px solid rgb(253, 252, 245);
+  border: 5px solid rgb(245, 250, 253);
   max-width: 200px;
-  min-width: 100px;
+  min-width: 130px;
   display: grid;
   align-items: center;
   gap: 15px;
@@ -96,4 +92,19 @@ hr.card-section-line {
   width: 300px;
   margin: auto;
   border-top: 1px dashed var(--teal-accent);
+}
+
+/* BOTTOM / HOURLY */
+
+.today-bottom-container {
+  margin-top: 20px;
+  grid-column: 1 / 3;
+}
+
+.hour-display {
+  margin: 40px;
+  border: 1px solid var(--dark-accent);
+  display: flex;
+  overflow: hidden;
+  overflow: scroll;
 }
