--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -5,18 +5,29 @@
 .today-top-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  padding-bottom: 40px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 750px) {
   .today-top-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 }
 
-.today-top-container > .current.display {
-  padding-bottom: 40px;
+.card-header {
+  font-size: 1.3rem;
+}
+
+.high-low {
+  display: grid;
+  gap: 7px;
+}
+
+@media (max-width: 880px) {
+  .card.small > .card-header {
+    font-size: 1em;
+  }
 }
 
 .flex-column {
@@ -61,7 +72,7 @@
 /* TODAY INFO CARDS */
 
 .today-grid {
-  margin: 40px 15px;
+  margin-top: 40px;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   gap: 25px;
@@ -71,15 +82,14 @@
 div.small.card {
   padding: 15px;
   border: 5px solid rgb(245, 250, 253);
-  max-width: 200px;
   min-width: 130px;
   display: grid;
   align-items: center;
   gap: 15px;
 }
 
-.img-container.small > img {
-  width: 6vmin;
+.img-container.small > img,
+.hourly-card > .img-container > img {
   height: auto;
 }
 
@@ -97,14 +107,35 @@ hr.card-section-line {
 /* BOTTOM / HOURLY */
 
 .today-bottom-container {
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   grid-column: 1 / 3;
 }
 
-.hour-display {
-  margin: 40px;
-  border: 1px solid var(--dark-accent);
-  display: flex;
-  overflow: hidden;
-  overflow: scroll;
+.sun {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
+  align-items: center;
+  gap: 25px;
+}
+
+.sunrise.card,
+.sunset.card {
+  padding: 20px 50px;
+}
+
+.sunrise.card > h2,
+.sunset.card > h2 {
+  padding-bottom: 0.5rem;
+}
+
+.sunrise.card {
+  border: 2px solid var(--teal-accent);
+  min-width: 200px;
+}
+
+.sunset.card {
+  border: 2px solid var(--dark-accent);
+  min-width: 200px;
 }
