--- a/src/styles/UserFields.css
+++ b/src/styles/UserFields.css
@@ -2,6 +2,9 @@
 .form-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 form {
