--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  min-width: 350px;
   min-height: 100vh;
 }
 
